# automata

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel-automata  bazel-bin  bazel-out  bazel-testlogs  cluster-issuer.yaml  container_deps.bzl  deps.bzl  flake.nix  go.mod  go.sum  go_deps.bzl  groups  issuer.yaml  kipp.yaml  project.config  renovate.json  shell.nix
clusters/desire/: BUILD.bazel  cluster-issuer.cue  desire.cue  list.cue
clusters/desire/adya/: BUILD.bazel  deployment.cue  deployment.yaml  list.cue  namespace.cue  namespace.yaml  sealed-secret.yaml  sealed_secret.cue
clusters/desire/cert-manager/: BUILD.bazel  helm-release.yaml
clusters/desire/cert_manager/: BUILD.bazel  helm_release.cue  list.cue  namespace.cue
clusters/desire/helm-operator/: BUILD.bazel  helm-release.yaml  namespace.yaml
clusters/desire/helm_operator/: BUILD.bazel  helm_release.cue  list.cue  namespace.cue
clusters/desire/ingress-nginx/: BUILD.bazel  helm-release.yaml
clusters/desire/ingress_nginx/: BUILD.bazel  helm_release.cue  list.cue  namespace.cue
clusters/desire/kipp/: BUILD.bazel  deployment.cue  deployment.yaml  hpa.cue  hpa.yaml  ingress.cue  ingress.yaml  list.cue  namespace.cue  namespace.yaml  sealed-secret.yaml  sealed_secret.cue  service.cue  service.yaml
clusters/desire/kipp-dev/: BUILD.bazel  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  sealed-secret.yaml  service.yaml
clusters/desire/kipp_dev/: BUILD.bazel  deployment.cue  hpa.cue  ingress.cue  list.cue  namespace.cue  sealed_secret.cue  service.cue
clusters/desire/kube-system/: BUILD.bazel
clusters/desire/kube_system/: BUILD.bazel  list.cue
clusters/desire/oauth2-proxy/: BUILD.bazel  deployment.yaml  ingress.yaml  sealed-secret.yaml  service.yaml
clusters/desire/oauth2_proxy/: BUILD.bazel  deployment.cue  hpa.cue  ingress.cue  list.cue  namespace.cue  sealed_secret.cue  service.cue
clusters/desire/promlens/: BUILD.bazel  deployment.cue  deployment.yaml  hpa.cue  hpa.yaml  ingress.cue  ingress.yaml  list.cue  namespace.cue  namespace.yaml  service.cue  service.yaml
clusters/desire/promtail/: BUILD.bazel  cluster_role.cue  cluster_role_binding.cue  config_map.cue  daemon_set.cue  list.cue  namespace.cue  service_account.cue
clusters/desire/root/: BUILD.bazel  deployment.cue  deployment.yaml  hpa.cue  hpa.yaml  ingress.cue  ingress.yaml  list.cue  namespace.cue  namespace.yaml  service.cue  service.yaml
clusters/desire/root-dev/: BUILD.bazel  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
clusters/desire/root_dev/: BUILD.bazel  deployment.cue  hpa.cue  ingress.cue  list.cue  namespace.cue  service.cue
clusters/desire/telemetry/: BUILD.bazel  list.cue  namespace.cue
clusters/desire/tesla-exporter/: BUILD.bazel  deployment.yaml  namespace.yaml  sealed-secret.yaml
clusters/desire/tesla_exporter/: BUILD.bazel  deployment.cue  list.cue  namespace.cue  sealed_secret.cue
clusters/desire/tesladump/: BUILD.bazel  cron-job.yaml  cron_job.cue  deployment.cue  deployment.yaml  list.cue  namespace.cue  namespace.yaml  sealed-secret.yaml  sealed_secret.cue  service.cue  service.yaml
clusters/desire/thanos/: BUILD.bazel  list.cue  namespace.cue  sealed-secret.cue  sealed-secret.yaml  sealed_secret.cue
clusters/desire/vector/: BUILD.bazel  cluster_role.cue  cluster_role_binding.cue  config_map.cue  daemon_set.cue  list.cue  namespace.cue  service_account.cue
clusters/mahalo/: BUILD.bazel  cluster_issuer.cue  cluster_issuer_list.cue  list.cue
clusters/mahalo/adya/: BUILD.bazel  deployment.cue  deployment_list.cue  list.cue  namespace.cue  sealed_secret.cue
clusters/mahalo/cert_manager/: BUILD.bazel  cluster_role.cue  cluster_role_binding.cue  cluster_role_binding_list.cue  cluster_role_list.cue  custom_resource_definition.cue  deployment.cue  list.cue  mutating_webhook_configuration.cue  namespace.cue  namespace_list.cue  role.cue  role_binding.cue  service.cue  service_account.cue  validating_webhook_configuration.cue
clusters/mahalo/grafana/: BUILD.bazel  config_map.cue  deployment.cue  horizontal_pod_autoscaler.cue  ingress.cue  ingress_list.cue  list.cue  namespace.cue  sealed_secret.cue  service.cue
clusters/mahalo/ingress_nginx/: BUILD.bazel  cluster_role.cue  cluster_role_binding.cue  config_map.cue  deployment.cue  deployment_list.cue  horizontal_pod_autoscaler_list.cue  job.cue  list.cue  namespace.cue  role.cue  role_binding.cue  role_list.cue  service.cue  service_account.cue  validating_webhook_configuration.cue  validating_webhook_configuration_list.cue
clusters/mahalo/io_6f/: BUILD.bazel  (+9 more)
cmd/resolver/: BUILD.bazel  main.go
container/smartmontools/: BUILD.bazel
k8s/amour/: BUILD.bazel  README.md  apply_set_list.cue  cluster_issuer_list.cue  cluster_secret_store_list.cue  custom_resource_definition_list.cue  gateway_class_list.cue  list.cue
k8s/magiclove/: BUILD.bazel  README.md  apply_set_list.cue  cluster_issuer_list.cue  cluster_secret_store_list.cue  custom_resource_definition_list.cue  gateway_class_list.cue  list.cue
k8s/mahalo/: BUILD.bazel  list.cue
k8s/pillowtalk/: BUILD.bazel  cluster_issuer_list.cue  installation_list.cue  list.cue
k8s/unwind/: BUILD.bazel  README.md  apply_set_list.cue  cluster_list.cue  cluster_role_binding_list.cue  custom_resource_definition_list.cue  list.cue  machine_deployment_list.cue  metal_cluster_list.cue  metal_machine_template_list.cue  server_list.cue  servers.cue  storage_class_list.cue  talos_config_template_list.cue  talos_control_plane_list.cue  unwind.cue  unwind.yaml
k8s/unwind_bootstrap/: BUILD.bazel  cluster_list.cue  list.cue  machine_deployment_list.cue  metal_cluster_list.cue  metal_machine_template_list.cue  server_class_list.cue  server_list.cue  talos_config_template_list.cue  talos_control_plane_list.cue  unwind-bootstrap.yaml
tools/: BUILD.bazel  image.cue  secret_template.cue  tools.go  tools_test.go
tools/jsonpatch/: BUILD.bazel  patch.cue
tools/kube_config/: BUILD.bazel  kube_config.cue
tools/resolver/: BUILD.bazel  resolver.sh
(+2456 files in other folders)
