load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")
load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@com_github_tnarg_rules_cue//gazelle/cue"],
)

# gazelle:prefix github.com/uhthomas/automata
gazelle(
    name = "gazelle",
    external = "static",
    gazelle = ":gazelle_binary",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "--build_file_proto_mode=disable_global",
        "--from_file=go.mod",
        "--prune",
        "--to_macro=go_deps.bzl%go_dependencies",
    ],
    command = "update-repos",
)

buildifier(name = "buildifier")

cue_export(
    name = "cilium_1_14_0",
    src = "cilium-1.14.0.cue",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "cilium_1_16_1",
    src = "cilium-1.16.1.cue",
    visibility = ["//visibility:public"],
)
