load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "tools_test",
    srcs = ["tools_test.go"],
)

cue_library(
    name = "cue_tools_library",
    srcs = ["image.cue"],
    importpath = "github.com/uhthomas/automata/tools",
    visibility = ["//visibility:public"],
)
