load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")


cue_library(
    name = "cue_desire_library",
    srcs = ["cluster-issuer.cue"],
    importpath = "github.com/uhthomas/automata/clusters/desire",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_desire_library",
        "//clusters/desire/root_dev:cue_root_dev_library",
        "//clusters/desire/thanos:cue_thanos_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)

load("@k8s_desire//:defaults.bzl", "k8s_desire")

k8s_desire(
    name = "list_object",
    kind = "Deployment",
    template = ":list",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        ":list_object",
        "//clusters/desire/adya:objects",
        "//clusters/desire/cert-manager:objects",
        "//clusters/desire/helm-operator:objects",
        "//clusters/desire/ingress-nginx:objects",
        "//clusters/desire/kipp:objects",
        "//clusters/desire/kipp-dev:objects",
        "//clusters/desire/kube-system:objects",
        "//clusters/desire/oauth2-proxy:objects",
        "//clusters/desire/promlens:objects",
        "//clusters/desire/root:objects",
        "//clusters/desire/telemetry:objects",
        "//clusters/desire/tesla-exporter:objects",
        "//clusters/desire/tesladump:objects",
    ],
)
