load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

cue_library(
    name = "cue_desire_library",
    srcs = ["cluster_issuer.cue"],
    importpath = "github.com/uhthomas/automata/clusters/desire",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_desire_library",
        "//clusters/desire/adya:cue_adya_library",
        "//clusters/desire/cert_manager:cue_cert_manager_library",
        "//clusters/desire/helm_operator:cue_helm_operator_library",
        "//clusters/desire/ingress_nginx:cue_ingress_nginx_library",
        "//clusters/desire/kipp:cue_kipp_library",
        "//clusters/desire/kipp_dev:cue_kipp_dev_library",
        "//clusters/desire/kube_system:cue_kube_system_library",
        "//clusters/desire/oauth2_proxy:cue_oauth2_proxy_library",
        "//clusters/desire/promlens:cue_promlens_library",
        "//clusters/desire/root:cue_root_library",
        "//clusters/desire/root_dev:cue_root_dev_library",
        "//clusters/desire/telemetry:cue_telemetry_library",
        "//clusters/desire/tesla_exporter:cue_tesla_exporter_library",
        "//clusters/desire/tesladump:cue_tesladump_library",
        "//clusters/desire/thanos:cue_thanos_library",
        "//clusters/desire/vector:cue_vector_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)

k8s_object(
    name = "object",
    args = ["-l=app.kubernetes.io/managed-by=automata"],
    cluster = "desire",
    kind = "Deployment",
    template = ":list",
)
