load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = ["-l=app.kubernetes.io/managed-by=automata"],
    context = "mahalo",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_library(
    name = "cue_mahalo_library",
    srcs = ["cluster_issuer.cue"],
    importpath = "github.com/uhthomas/automata/clusters/mahalo",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_mahalo_library",
        "//clusters/mahalo/cert_manager:cue_cert_manager_library",
        "//clusters/mahalo/grafana:cue_grafana_library",
        "//clusters/mahalo/ingress_nginx:cue_ingress_nginx_library",
        "//clusters/mahalo/io_6f_dev:cue_io_6f_dev_library",
        "//clusters/mahalo/oauth2_proxy:cue_oauth2_proxy_library",
        "//clusters/mahalo/sealed_secrets:cue_sealed_secrets_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
