load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "resolver_lib",
    srcs = ["main.go"],
    importpath = "github.com/uhthomas/automata/cmd/resolver",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_binary(
    name = "resolver",
    embed = [":resolver_lib"],
    visibility = ["//visibility:public"],
)
