load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_docker//docker/package_managers:download_pkgs.bzl", "download_pkgs")
load("@io_bazel_rules_docker//docker/package_managers:install_pkgs.bzl", "install_pkgs")

download_pkgs(
    name = "pkgs",
    image_tar = "@io_docker_index_library_debian_bookworm_slim//image",
    packages = ["smartmontools"],
)

install_pkgs(
    name = "pkgs_image",
    image_tar = "@io_docker_index_library_debian_bookworm_slim//image",
    installables_tar = ":pkgs.tar",
    installation_cleanup_commands = "rm -rf /var/lib/apt/lists/*",
    output_image_name = "pkgs_image",
)

container_image(
    name = "image",
    base = ":pkgs_image.tar",
    visibility = ["//visibility:public"],
)
