load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = [
        "--server-side",
        "--force-conflicts",
        "--applyset=applyset/automata",
        "--prune",
    ],
    context = "",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_amour_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/amour/cert_manager:cue_cert_manager_library",
        "//k8s/amour/cert_manager_csi_driver:cue_cert_manager_csi_driver_library",
        "//k8s/amour/cilium:cue_cilium_library",
        "//k8s/amour/dcgm_exporter:cue_dcgm_exporter_library",
        "//k8s/amour/external_secrets:cue_external_secrets_library",
        "//k8s/amour/grafana:cue_grafana_library",
        "//k8s/amour/home_assistant:cue_home_assistant_library",
        "//k8s/amour/karma:cue_karma_library",
        "//k8s/amour/kube_state_metrics:cue_kube_state_metrics_library",
        "//k8s/amour/kube_system:cue_kube_system_library",
        "//k8s/amour/media:cue_media_library",
        "//k8s/amour/metrics_server:cue_metrics_server_library",
        "//k8s/amour/node_exporter:cue_node_exporter_library",
        "//k8s/amour/node_feature_discovery:cue_node_feature_discovery_library",
        "//k8s/amour/node_problem_detector:cue_node_problem_detector_library",
        "//k8s/amour/nvidia_device_plugin:cue_nvidia_device_plugin_library",
        "//k8s/amour/onepassword_connect:cue_onepassword_connect_library",
        "//k8s/amour/ping_exporter:cue_ping_exporter_library",
        "//k8s/amour/rook_ceph:cue_rook_ceph_library",
        "//k8s/amour/scrutiny:cue_scrutiny_library",
        "//k8s/amour/smartctl_exporter:cue_smartctl_exporter_library",
        "//k8s/amour/snapshot_controller:cue_snapshot_controller_library",
        "//k8s/amour/tailscale:cue_tailscale_library",
        "//k8s/amour/thomas:cue_thomas_library",
        "//k8s/amour/vm:cue_vm_library",
        "//k8s/amour/vm_operator:cue_vm_operator_library",
    ],
)

cue_library(
    name = "cue_amour_library",
    srcs = [
        "apply_set_list.cue",
        "cluster_secret_store_list.cue",
        "custom_resource_definition_list.cue",
    ],
    importpath = "github.com/uhthomas/automata/k8s/amour",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/github.com/external-secrets/external-secrets/apis/externalsecrets/v1beta1:cue_v1beta1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:cue_v1_library",
    ],
)
