load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = [
        "--server-side",
        "--force-conflicts",
        "--applyset=applyset/automata",
        "--prune",
    ],
    context = "",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_magiclove_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/magiclove/backup:cue_backup_library",
        "//k8s/magiclove/cert_manager:cue_cert_manager_library",
        "//k8s/magiclove/cert_manager_csi_driver:cue_cert_manager_csi_driver_library",
        "//k8s/magiclove/cilium:cue_cilium_library",
        "//k8s/magiclove/cilium_secrets:cue_cilium_secrets_library",
        "//k8s/magiclove/cnpg_system:cue_cnpg_system_library",
        "//k8s/magiclove/dcgm_exporter:cue_dcgm_exporter_library",
        "//k8s/magiclove/default:cue_default_library",
        "//k8s/magiclove/external_dns:cue_external_dns_library",
        "//k8s/magiclove/external_secrets:cue_external_secrets_library",
        "//k8s/magiclove/frigate:cue_frigate_library",
        "//k8s/magiclove/fstrim:cue_fstrim_library",
        "//k8s/magiclove/gateway_api:cue_gateway_api_library",
        "//k8s/magiclove/grafana:cue_grafana_library",
        "//k8s/magiclove/grafana_operator:cue_grafana_operator_library",
        "//k8s/magiclove/home_assistant:cue_home_assistant_library",
        "//k8s/magiclove/immich:cue_immich_library",
        "//k8s/magiclove/karma:cue_karma_library",
        "//k8s/magiclove/kube_state_metrics:cue_kube_state_metrics_library",
        "//k8s/magiclove/kube_system:cue_kube_system_library",
        "//k8s/magiclove/linkding:cue_linkding_library",
        "//k8s/magiclove/media:cue_media_library",
        "//k8s/magiclove/metrics_server:cue_metrics_server_library",
        "//k8s/magiclove/minecraft:cue_minecraft_library",
        "//k8s/magiclove/mosquitto:cue_mosquitto_library",
        "//k8s/magiclove/node_exporter:cue_node_exporter_library",
        "//k8s/magiclove/node_problem_detector:cue_node_problem_detector_library",
        "//k8s/magiclove/nvidia_device_plugin:cue_nvidia_device_plugin_library",
        "//k8s/magiclove/onepassword_connect:cue_onepassword_connect_library",
        "//k8s/magiclove/ping_exporter:cue_ping_exporter_library",
        "//k8s/magiclove/rook_ceph:cue_rook_ceph_library",
        "//k8s/magiclove/scrutiny:cue_scrutiny_library",
        "//k8s/magiclove/smartctl_exporter:cue_smartctl_exporter_library",
        "//k8s/magiclove/snapshot_controller:cue_snapshot_controller_library",
        "//k8s/magiclove/speedtest_exporter:cue_speedtest_exporter_library",
        "//k8s/magiclove/thomas:cue_thomas_library",
        "//k8s/magiclove/vector:cue_vector_library",
        "//k8s/magiclove/victoria_logs:cue_victoria_logs_library",
        "//k8s/magiclove/vm:cue_vm_library",
        "//k8s/magiclove/vm_operator:cue_vm_operator_library",
        "//k8s/magiclove/volsync_system:cue_volsync_system_library",
        "//k8s/magiclove/wireguard:cue_wireguard_library",
        "//k8s/magiclove/wireguard_operator:cue_wireguard_operator_library",
        "//k8s/magiclove/zigbee2mqtt:cue_zigbee2mqtt_library",
    ],
)

cue_library(
    name = "cue_magiclove_library",
    srcs = [
        "apply_set_list.cue",
        "cluster_issuer_list.cue",
        "cluster_secret_store_list.cue",
        "custom_resource_definition_list.cue",
        "gateway_class_list.cue",
    ],
    importpath = "github.com/uhthomas/automata/k8s/magiclove",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/github.com/cert-manager/cert-manager/pkg/apis/certmanager/v1:cue_v1_library",
        "//cue.mod/gen/github.com/external-secrets/external-secrets/apis/externalsecrets/v1beta1:cue_v1beta1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:cue_v1_library",
        "//cue.mod/gen/sigs.k8s.io/gateway-api/apis/v1:cue_v1_library",
    ],
)
