load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = ["-l=app.kubernetes.io/managed-by=automata"],
    context = "pillowtalk",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_pillowtalk_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/pillowtalk/cert_manager:cue_cert_manager_library",
        "//k8s/pillowtalk/cloudflared:cue_cloudflared_library",
        "//k8s/pillowtalk/ingress_nginx:cue_ingress_nginx_library",
        "//k8s/pillowtalk/kube_state_metrics:cue_kube_state_metrics_library",
        "//k8s/pillowtalk/kube_system:cue_kube_system_library",
        "//k8s/pillowtalk/loki:cue_loki_library",
        "//k8s/pillowtalk/node_exporter:cue_node_exporter_library",
        "//k8s/pillowtalk/prometheus:cue_prometheus_library",
        "//k8s/pillowtalk/prometheus_operator:cue_prometheus_operator_library",
        "//k8s/pillowtalk/promtail:cue_promtail_library",
        "//k8s/pillowtalk/rook_ceph:cue_rook_ceph_library",
        "//k8s/pillowtalk/sealed_secrets:cue_sealed_secrets_library",
        "//k8s/pillowtalk/thanos:cue_thanos_library",
        "//k8s/pillowtalk/tigera_operator:cue_tigera_operator_library",
    ],
)

cue_library(
    name = "cue_pillowtalk_library",
    srcs = [
        "cluster_issuer_list.cue",
        "installation_list.cue",
    ],
    importpath = "github.com/uhthomas/automata/k8s/pillowtalk",
    visibility = ["//visibility:public"],
    deps = ["//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library"],
)
