load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = ["-l=app.kubernetes.io/managed-by=automata"],
    context = "unwind",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/unwind/bazarr:cue_bazarr_library",
        "//k8s/unwind/cert_manager:cue_cert_manager_library",
        "//k8s/unwind/cert_manager_csi_driver:cue_cert_manager_csi_driver_library",
        "//k8s/unwind/grafana:cue_grafana_library",
        "//k8s/unwind/grafana_agent:cue_grafana_agent_library",
        "//k8s/unwind/grafana_agent_operator:cue_grafana_agent_operator_library",
        "//k8s/unwind/jackett:cue_jackett_library",
        "//k8s/unwind/jellyfin:cue_jellyfin_library",
        "//k8s/unwind/jellyseerr:cue_jellyseerr_library",
        "//k8s/unwind/radarr:cue_radarr_library",
        "//k8s/unwind/recyclarr:cue_recyclarr_library",
        "//k8s/unwind/rook_ceph:cue_rook_ceph_library",
        "//k8s/unwind/secrets_store_csi_driver:cue_secrets_store_csi_driver_library",
        "//k8s/unwind/sonarr:cue_sonarr_library",
        "//k8s/unwind/tailscale:cue_tailscale_library",
        "//k8s/unwind/vault:cue_vault_library",
        "//k8s/unwind/vault_config_operator:cue_vault_config_operator_library",
        "//k8s/unwind/vault_csi_provider:cue_vault_csi_provider_library",
    ],
)
