load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = ["-l=app.kubernetes.io/managed-by=automata"],
    context = "unwind",
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/unwind/cert_manager:cue_cert_manager_library",
        "//k8s/unwind/cert_manager_csi_driver:cue_cert_manager_csi_driver_library",
        "//k8s/unwind/csi_snapshotter:cue_csi_snapshotter_library",
        "//k8s/unwind/grafana:cue_grafana_library",
        "//k8s/unwind/grafana_agent:cue_grafana_agent_library",
        "//k8s/unwind/grafana_agent_operator:cue_grafana_agent_operator_library",
        "//k8s/unwind/intel_gpu_plugin:cue_intel_gpu_plugin_library",
        "//k8s/unwind/kube_state_metrics:cue_kube_state_metrics_library",
        "//k8s/unwind/loki:cue_loki_library",
        "//k8s/unwind/media:cue_media_library",
        "//k8s/unwind/mimir:cue_mimir_library",
        "//k8s/unwind/node_feature_discovery:cue_node_feature_discovery_library",
        "//k8s/unwind/node_problem_detector:cue_node_problem_detector_library",
        "//k8s/unwind/rook_ceph:cue_rook_ceph_library",
        "//k8s/unwind/secrets_store_csi_driver:cue_secrets_store_csi_driver_library",
        "//k8s/unwind/snapshot_controller:cue_snapshot_controller_library",
        "//k8s/unwind/tailscale:cue_tailscale_library",
        "//k8s/unwind/vault:cue_vault_library",
        "//k8s/unwind/vault_config_operator:cue_vault_config_operator_library",
        "//k8s/unwind/vault_csi_provider:cue_vault_csi_provider_library",
    ],
)
