load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")

k8s_object(
    name = "object",
    args = [
        "--server-side",
        "--applyset=applyset/automata",
        "--prune",
    ],
    context = "",
    images = {
        # "ghcr.io/uhthomas/automata/ntfs3grsync:{STABLE_GIT_COMMIT}": "//container/ntfs3grsync:image",
        # "ghcr.io/uhthomas/automata/rsync:{STABLE_GIT_COMMIT}": "//container/rsync:image",
        # "ghcr.io/uhthomas/automata/smartmontools:{STABLE_GIT_COMMIT}": "//container/smartmontools:image",
    },
    kind = "Deployment",
    template = ":list",
    visibility = ["//visibility:public"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_unwind_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//k8s/unwind/cert_manager:cue_cert_manager_library",
        "//k8s/unwind/cert_manager_csi_driver:cue_cert_manager_csi_driver_library",
        "//k8s/unwind/cockroach_operator_system:cue_cockroach_operator_system_library",
        "//k8s/unwind/csi_snapshotter:cue_csi_snapshotter_library",
        "//k8s/unwind/dragonfly_operator_system:cue_dragonfly_operator_system_library",
        "//k8s/unwind/grafana:cue_grafana_library",
        "//k8s/unwind/grafana_agent:cue_grafana_agent_library",
        "//k8s/unwind/grafana_agent_operator:cue_grafana_agent_operator_library",
        "//k8s/unwind/home_assistant:cue_home_assistant_library",
        "//k8s/unwind/immich:cue_immich_library",
        "//k8s/unwind/intel_gpu_plugin:cue_intel_gpu_plugin_library",
        "//k8s/unwind/kube_state_metrics:cue_kube_state_metrics_library",
        "//k8s/unwind/kube_system:cue_kube_system_library",
        "//k8s/unwind/kubernetes_dashboard:cue_kubernetes_dashboard_library",
        "//k8s/unwind/kubevirt:cue_kubevirt_library",
        "//k8s/unwind/loki:cue_loki_library",
        "//k8s/unwind/media:cue_media_library",
        "//k8s/unwind/mimir:cue_mimir_library",
        "//k8s/unwind/minecraft:cue_minecraft_library",
        "//k8s/unwind/node_feature_discovery:cue_node_feature_discovery_library",
        "//k8s/unwind/node_problem_detector:cue_node_problem_detector_library",
        "//k8s/unwind/postgres_operator:cue_postgres_operator_library",
        "//k8s/unwind/redis_operator:cue_redis_operator_library",
        "//k8s/unwind/rook_ceph:cue_rook_ceph_library",
        "//k8s/unwind/secrets_store_csi_driver:cue_secrets_store_csi_driver_library",
        "//k8s/unwind/snapshot_controller:cue_snapshot_controller_library",
        "//k8s/unwind/tailscale:cue_tailscale_library",
        "//k8s/unwind/thomas:cue_thomas_library",
        "//k8s/unwind/vault:cue_vault_library",
        "//k8s/unwind/vault_csi_provider:cue_vault_csi_provider_library",
        "//k8s/unwind/vm_operator:cue_vm_operator_library",
    ],
)

cue_library(
    name = "cue_unwind_library",
    srcs = [
        "apply_set_list.cue",
        "cluster_role_binding_list.cue",
        "custom_resource_definition_list.cue",
        "storage_class_list.cue",
    ],
    importpath = "github.com/uhthomas/automata/k8s/unwind",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/rbac/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/storage/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1:cue_v1_library",
    ],
)
