load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_export", "cue_library")

cue_library(
    name = "cue_unwind_bootstrap_library",
    srcs = [
        "cluster_list.cue",
        "machine_deployment_list.cue",
        "metal_cluster_list.cue",
        "metal_machine_template_list.cue",
        "server_list.cue",
        "talos_config_template_list.cue",
        "talos_control_plane_list.cue",
    ],
    importpath = "github.com/uhthomas/automata/k8s/unwind_bootstrap",
    visibility = ["//visibility:public"],
    deps = ["//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library"],
)

cue_export(
    name = "list",
    src = "list.cue",
    visibility = ["//visibility:public"],
    deps = [
        ":cue_unwind_bootstrap_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
