load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_adya_library",
    srcs = [
        "deployment.cue",
        "list.cue",
        "namespace.cue",
        "sealed_secret.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/desire/adya",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
