load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_kube_system_library",
    srcs = ["list.cue"],
    importpath = "github.com/uhthomas/automata/clusters/desire/kube_system",
    visibility = ["//visibility:public"],
    deps = [
        "//clusters/desire/kube_system/metrics_server:cue_metrics_server_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
