load("@k8s_desire//:defaults.bzl", "k8s_desire")

k8s_desire(
    name = "namespace",
    kind = "Namespace",
    template = "namespace.yaml",
)

k8s_desire(
    name = "deployment",
    kind = "Deployment",
    namespace = "root-dev",
    template = "deployment.yaml",
)

k8s_desire(
    name = "hpa",
    kind = "HorizontalPodAutoscaler",
    namespace = "root-dev",
    template = "hpa.yaml",
)

k8s_desire(
    name = "ingress",
    kind = "Ingress",
    namespace = "root-dev",
    template = "ingress.yaml",
)

k8s_desire(
    name = "service",
    kind = "Service",
    namespace = "root-dev",
    template = "service.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        ":namespace",
        ":deployment",
        ":hpa",
        ":service",
        ":ingress",
    ],
    visibility = ["//visibility:public"],
)
