load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_root_library",
    srcs = [
        "deployment.cue",
        "hpa.cue",
        "ingress.cue",
        "list.cue",
        "namespace.cue",
        "service.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/desire/root",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/autoscaling/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/networking/v1:cue_v1_library",
    ],
)
