load("@k8s_desire//:defaults.bzl", "k8s_desire")

k8s_desire(
    name = "namespace",
    kind = "Namespace",
    template = "namespace.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        ":namespace",
        "//clusters/desire/telemetry/fluent-bit:objects",
        "//clusters/desire/telemetry/grafana:objects",
        "//clusters/desire/telemetry/kube-state-metrics:objects",
        "//clusters/desire/telemetry/loki:objects",
        "//clusters/desire/telemetry/prometheus:objects",
    ],
    visibility = ["//visibility:public"],
)
