load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_telemetry_library",
    srcs = [
        "list.cue",
        "namespace.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/desire/telemetry",
    visibility = ["//visibility:public"],
    deps = [
        "//clusters/desire/telemetry/grafana:cue_grafana_library",
        "//clusters/desire/telemetry/kube_state_metrics:cue_kube_state_metrics_library",
        "//clusters/desire/telemetry/loki:cue_loki_library",
        "//clusters/desire/telemetry/prometheus:cue_prometheus_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
