load("@k8s_desire//:defaults.bzl", "k8s_desire")

k8s_desire(
    name = "namespace",
    kind = "Namespace",
    template = "namespace.yaml",
)

k8s_desire(
    name = "cron_job",
    kind = "CronJob",
    namespace = "tesladump",
    template = "cron-job.yaml",
)

k8s_desire(
    name = "deployment",
    kind = "Deployment",
    namespace = "tesladump",
    template = "deployment.yaml",
)

k8s_desire(
    name = "sealed_secret",
    kind = "SealedSecret",
    namespace = "tesladump",
    template = "sealed-secret.yaml",
)

k8s_desire(
    name = "service",
    kind = "Service",
    namespace = "tesladump",
    template = "service.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        ":namespace",
        ":sealed_secret",
        ":deployment",
        ":service",
        ":cron_job",
    ],
    visibility = ["//visibility:public"],
)
