load("@com_github_tnarg_rules_cue//cue:cue.bzl", "cue_library")

cue_library(
    name = "cue_tesladump_library",
    srcs = [
        "cron_job.cue",
        "deployment.cue",
        "list.cue",
        "namespace.cue",
        "sealed_secret.cue",
        "service.cue",
    ],
    importpath = "github.com/uhthomas/automata/clusters/desire/tesladump",
    visibility = ["//visibility:public"],
    deps = [
        "//cue.mod/gen/k8s.io/api/apps/v1:cue_v1_library",
        "//cue.mod/gen/k8s.io/api/batch/v1beta1:cue_v1beta1_library",
        "//cue.mod/gen/k8s.io/api/core/v1:cue_v1_library",
    ],
)
