load("@k8s_desire//:defaults.bzl", "k8s_desire")

k8s_desire(
    name = "namespace",
    kind = "Namespace",
    template = "namespace.yaml",
)

k8s_desire(
    name = "sealed_secret",
    kind = "SealedSecret",
    namespace = "thanos",
    template = "sealed-secret.yaml",
)

load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

k8s_objects(
    name = "objects",
    objects = [
        ":namespace",
        ":sealed_secret",
        "//clusters/desire/thanos/store:objects",
        "//clusters/desire/thanos/query:objects",
        "//clusters/desire/thanos/query-frontend:objects",
    ],
    visibility = ["//visibility:public"],
)
